[project]
name = "exsel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pycryptodome>=3.23.0",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[tool.ruff]
extend-ignore = ["F403", "F405", "E402"]
